<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".salon.CrearSalonActivity">

    <EditText
        android:id="@+id/edt_nombre_salon"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/edt_nombre_salon"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_guardar_salon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_guardar_salon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_limpiar_salon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_volver_salon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="@+id/btn_limpiar_salon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_limpiar_salon"
        app:layout_constraintTop_toTopOf="@+id/btn_limpiar_salon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_limpiar_salon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_limpiar_familia"
        app:layout_constraintBottom_toBottomOf="@+id/btn_guardar_salon"
        app:layout_constraintEnd_toStartOf="@+id/btn_volver_salon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_guardar_salon"
        app:layout_constraintTop_toTopOf="@+id/btn_guardar_salon"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>