<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".articulos.ModificarArticulosActivity">

    <EditText
        android:id="@+id/edt_nombre_articulo_modificar"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/edt_nombre_articulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/sp_articulo_modificar"
        app:layout_constraintStart_toStartOf="@+id/sp_articulo_modificar"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edt_precio_articulo_modificar"
        android:layout_width="261dp"
        android:layout_height="41dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/edt_precio_articulo"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/edt_nombre_articulo_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_nombre_articulo_modificar" />

    <Button
        android:id="@+id/btn_guardar_articulo_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_modificar_articulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_volver_articulo_modificar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_volver_articulo_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="250dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="@+id/btn_guardar_articulo_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_guardar_articulo_modificar"
        app:layout_constraintTop_toTopOf="@+id/btn_guardar_articulo_modificar" />

    <ImageView
        android:id="@+id/img_familia_articulo_modificar"
        android:layout_width="136dp"
        android:layout_height="86dp"
        android:layout_marginEnd="149dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/sp_articulo_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_articulo_modificar"
        app:layout_constraintVertical_bias="0.447"
        app:srcCompat="@drawable/cafe" />

    <Spinner
        android:id="@+id/sp_articulo_modificar"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_articulo_modificar" />

    <TextView
        android:id="@+id/textView6_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/selecciona_familia_para_articulo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sp_articulo_modificar"
        app:layout_constraintStart_toStartOf="@+id/sp_articulo_modificar"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_articulo_modificar" />

</androidx.constraintlayout.widget.ConstraintLayout>