<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".pedido.RecyclerLineaPedidoActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_lineas_pedidos"
        android:layout_width="0dp"
        android:layout_height="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="195dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_total"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/totalproducto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_lineas_pedidos" />

    <TextView
        android:id="@+id/totalproducto"
        android:layout_width="195dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_lineas_pedidos" />

    <Button
        android:id="@+id/btn_pdf_factura"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_pdf_factura"
        app:layout_constraintEnd_toStartOf="@+id/btn_enviar_email_factura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btn_volver_factura"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_enviar_email_factura"
        app:layout_constraintTop_toBottomOf="@+id/totalproducto" />

    <Button
        android:id="@+id/btn_enviar_email_factura"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/botones_principales"
        android:text="@string/btn_email_factura"
        app:layout_constraintEnd_toStartOf="@+id/btn_volver_factura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_pdf_factura"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>